{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 59,
  "lineage": "5ed2419a-04ee-c3b3-28b7-027975bfd490",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example-ebs-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab1a82de7ca5889c",
            "arn": "arn:aws:ec2:eu-central-1:119365952464:instance/i-0411fbc33ebaea782",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0411fbc33ebaea782",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_tests",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01d3d42b7edb73bd3",
            "private_dns": "ip-192-168-1-97.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.97",
            "public_ip": "3.70.100.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b32e317ad4c2c3df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d2ad86176173072a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d27320b058c073a5",
            "tags": {
              "Name": "ebs-example"
            },
            "tags_all": {
              "Name": "ebs-example"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2ad86176173072a"
            ]
          },
          "dependencies": [
            "aws_security_group.example-ebs-sg",
            "aws_subnet.example-ebs-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example-ebs-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:119365952464:internet-gateway/igw-082ac8db6fc4d8048",
            "id": "igw-082ac8db6fc4d8048",
            "owner_id": "119365952464",
            "tags": {
              "Name": "example-ebs-igw"
            },
            "tags_all": {
              "Name": "example-ebs-igw"
            },
            "vpc_id": "vpc-0c3466da5aed9ac86"
          },
          "dependencies": [
            "aws_vpc.example-ebs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example-ebs-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:119365952464:route-table/rtb-0aef5d4e05421662f",
            "id": "rtb-0aef5d4e05421662f",
            "owner_id": "119365952464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082ac8db6fc4d8048",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c3466da5aed9ac86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example-ebs-igw",
            "aws_vpc.example-ebs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example-ebs-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044be59c4be66a70a",
            "route_table_id": "rtb-0aef5d4e05421662f",
            "subnet_id": "subnet-0d27320b058c073a5"
          },
          "dependencies": [
            "aws_internet_gateway.example-ebs-igw",
            "aws_route_table.example-ebs-rt",
            "aws_subnet.example-ebs-subnet",
            "aws_vpc.example-ebs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-ebs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:119365952464:security-group/sg-0d2ad86176173072a",
            "description": "Traffic allowed in/out of example-ebs-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2ad86176173072a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "example-ebs-sg",
            "name_prefix": "",
            "owner_id": "119365952464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-ebs-sg"
            },
            "tags_all": {
              "Name": "example-ebs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3466da5aed9ac86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example-ebs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example-ebs-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:119365952464:subnet/subnet-0d27320b058c073a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d27320b058c073a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "119365952464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-ebs-vpc-subnet"
            },
            "tags_all": {
              "Name": "example-ebs-vpc-subnet"
            },
            "vpc_id": "vpc-0c3466da5aed9ac86"
          },
          "dependencies": [
            "aws_vpc.example-ebs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example-ebs-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:119365952464:vpc/vpc-0c3466da5aed9ac86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-012fec4434ffc6ce1",
            "default_route_table_id": "rtb-0bd96232beb79f995",
            "default_security_group_id": "sg-0f2c9ae1ae09b4feb",
            "dhcp_options_id": "dopt-099225c352581b054",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c3466da5aed9ac86",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd96232beb79f995",
            "owner_id": "119365952464",
            "tags": {
              "Name": "example-ebs-vpc"
            },
            "tags_all": {
              "Name": "example-ebs-vpc"
            }
          }
        }
      ]
    }
  ]
}